[gd_scene load_steps=8 format=3 uid="uid://b0flbcapsm0ca"]

[ext_resource type="Script" uid="uid://bmgqwg6mhg6nd" path="res://Scripts/mainmenu3d.gd" id="1_cwrni"]
[ext_resource type="ArrayMesh" uid="uid://br7iuur1lf4la" path="res://Models/Platformer/block-snow-large-tall.obj" id="1_t0pxn"]

[sub_resource type="BoxShape3D" id="BoxShape3D_p50pd"]
size = Vector3(1.00684, 1, 1)

[sub_resource type="BoxMesh" id="BoxMesh_t0pxn"]

[sub_resource type="SystemFont" id="SystemFont_cwrni"]
font_names = PackedStringArray("Academy Engraved LET")

[sub_resource type="BoxShape3D" id="BoxShape3D_cwrni"]

[sub_resource type="SystemFont" id="SystemFont_gue0n"]
font_names = PackedStringArray("Academy Engraved LET")

[node name="mainMenu" type="Node3D"]
script = ExtResource("1_cwrni")

[node name="Mainmenuscreen" type="Camera3D" parent="."]
transform = Transform3D(0.998888, 0, -0.0471413, 0, 1, 0, 0.0471413, 0, 0.998888, 3.72094, 0.571279, 7.46273)

[node name="RayCast3D" type="RayCast3D" parent="Mainmenuscreen"]
transform = Transform3D(0.998888, 0, 0.0471413, 0, 1, 0, -0.0471413, 0, 0.998888, -3.68944, -1.10027, -5.28978)
target_position = Vector3(0, 0, -1)

[node name="LocalButton" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.47744, -1.30751, 0.0365164)

[node name="CollisionShape3D" type="CollisionShape3D" parent="LocalButton"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.130394, 0.18142, 0)
shape = SubResource("BoxShape3D_p50pd")

[node name="MeshInstance3D" type="MeshInstance3D" parent="LocalButton"]
mesh = SubResource("BoxMesh_t0pxn")

[node name="Label3D" type="Label3D" parent="LocalButton"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00234532, -0.0518208, 0.634825)
modulate = Color(0.905882, 0.25098, 0.231373, 1)
text = "Local
"
font = SubResource("SystemFont_cwrni")
font_size = 63

[node name="OnlineButton" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.923, -1.27947, 0.0818834)

[node name="CollisionShape3D" type="CollisionShape3D" parent="OnlineButton"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00341797, 0, 0)
shape = SubResource("BoxShape3D_p50pd")

[node name="MeshInstance3D" type="MeshInstance3D" parent="OnlineButton"]
mesh = SubResource("BoxMesh_t0pxn")
skeleton = NodePath("../..")

[node name="Label3D" type="Label3D" parent="OnlineButton"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00961715, -0.0182345, 0.511466)
modulate = Color(0.905882, 0.25098, 0.231373, 1)
text = "Online
"
font = SubResource("SystemFont_cwrni")
font_size = 63

[node name="QuitButton" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.53748, -1.32731, -0.0460869)

[node name="CollisionShape3D" type="CollisionShape3D" parent="QuitButton"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00341797, 0, 0)
shape = SubResource("BoxShape3D_p50pd")

[node name="MeshInstance3D" type="MeshInstance3D" parent="QuitButton"]
mesh = SubResource("BoxMesh_t0pxn")
skeleton = NodePath("../..")

[node name="Label3D" type="Label3D" parent="QuitButton"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00961715, -0.0182345, 0.536203)
modulate = Color(0.905882, 0.25098, 0.231373, 1)
text = "Quit"
font = SubResource("SystemFont_cwrni")
font_size = 63

[node name="Flatterrain" type="Area3D" parent="."]
transform = Transform3D(12, 0, 0, 0, 12, 0, 0, 0, 12, 6.4499, -25.837, -8.70574)

[node name="Block-snow-large-tall" type="MeshInstance3D" parent="Flatterrain"]
mesh = ExtResource("1_t0pxn")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Flatterrain"]
shape = SubResource("BoxShape3D_cwrni")

[node name="TitleScreen" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.8719, 1.75591, 2.24757)
modulate = Color(0.31522, 0.389693, 0.710261, 1)
text = "Ultimatum"
font = SubResource("SystemFont_gue0n")
font_size = 131

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 101.05, 2.54214, -327.151)
light_color = Color(0.999999, 0.986738, 0.65883, 1)
light_energy = 4.576
light_indirect_energy = 13.244
light_angular_distance = 9.09
light_cull_mask = 4294967231
directional_shadow_mode = 1
directional_shadow_split_1 = 0.11
sky_mode = 1

[connection signal="input_event" from="LocalButton" to="." method="_on_local_button_input_event"]
[connection signal="mouse_entered" from="LocalButton" to="." method="_on_local_button_mouse_entered"]
[connection signal="mouse_exited" from="LocalButton" to="." method="_on_local_button_mouse_exited"]
[connection signal="input_event" from="QuitButton" to="." method="_on_quit_button_input_event"]
[connection signal="mouse_entered" from="QuitButton" to="." method="_on_quit_button_mouse_entered"]
[connection signal="mouse_exited" from="QuitButton" to="." method="_on_quit_button_mouse_exited"]
